--- a/Eng-Software/organizacao_da_equipa.tex
+++ b/Eng-Software/organizacao_da_equipa.tex
@@ -1,7 +1,7 @@
 \chapter{Organização da Equipa}
 \label{organizacao_da_equipa}
 \section{Lista de funções/competências necessárias}
-Este projeto irá requer competências relacionadas com programação backend e frontend, gestão de equipa e desenho e gestão de bases de dados.
+Este projeto irá requer competências relacionadas com gestão e planeamento, gestão de equipa e desenho, desenho e gestão de bases de dados e programação backend e frontend.
 \section{Identificação dos membros da equipa}
 \paragraph{Ricardo Sá Monteiro 
 \\ Aluno no curso de Engenharia Informática, 2º ano, na Universidade Lusófona do Porto}
@@ -10,18 +10,10 @@ Este projeto irá requer competências relacionadas com programação backend e 
 \paragraph{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues
 \\ Aluno no curso de Engenharia Informática, 2º ano, na Universidade Lusófona do Porto}
 \section{Responsabilidades e Tarefas de cada membro da equipa}
-Cada membro da equipa foi responsável por completar vários capítulos e secções deste documento, como também no desenvolvimento do sistema.
+Cada membro da equipa foi responsável por completar vários capítulos e secções deste documento, como também na programação do sistema e base de dados.
 \subsection{Ricardo Sá Monteiro}
-Responsável por vários capitulos, correção e formatação do documento.
+Responsável por vários capítulos, correção e formatação do documento.
 \subsection{Rita Mendes de Azevedo}
-Responsavel por vários capitulos, design e organização.
+Responsável por vários capítulos, design e organização.
 \subsection{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues}
-Responsavel por vários capitulos e pesquisa.
-\section{Identificação de formação em valências/competências a adquirir}
-Formações em programação de x y e z
-\section{Identificação de necessidades de contratação de pessoal}
-Não é necessario
-\section{Identificação de necessidades de subcontratação}
-Também não acho necessario
-\section{Se necessário pode ser complementado com um organograma}
-Por meter... 
+Responsável por vários capítulos e pesquisa.
