--- a/Eng-Software/introducao.tex
+++ b/Eng-Software/introducao.tex
@@ -4,7 +4,7 @@
 \subsection{Enquadramento incial}
 Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar,planear e solidificar um plano de projeto para o sistema.
 A ideia do ePadaria começou pela cadeira de \textbf{Análise de Sistemas}, o tema foi um dos três temas escolhidos pelo nosso grupo e proposto pelo nossos professor, durante essa cadeira fomos aprendendo sobre requisitos e no final desenvolvemos o documento de requisitos para o ePadaria. No documento definimos os casos de uso,requisitos,os nosso atores,os pacotes do sistema e os nossos fluxos.\\
-Continuamos o desenvolvimento do documento de requisitos mas, com este documento desenvolvido para a cadeira de Engenharia de Software, onde iremos aprender mais um género de documento, outras práticas na escrita do mesmo e alargar os nosso conhecimentos.
+Continuamos o desenvolvimento do documento de requisitos mas, com este documento desenvolvido para a cadeira de Engenharia de Software, onde iremos aprender mais um gênero de documento, outras práticas na escrita do mesmo e alargar os nosso conhecimentos.
 
 \subsection{Público alvo}
 O público alvo do nosso projeto são a maioria das padarias que se apresentam sem um sistema de gestão de pedidos.\\
